--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,13 +2,12 @@ FROM python:3.10-slim
 WORKDIR /
 COPY requirements.txt .
 
+RUN pip install --upgrade pip
 
 RUN pip install -r requirements.txt
 
-
 COPY api.py .
 COPY best_model.pkl .
-
 
 LABEL authors="admin"
 
