--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ deploy:
   stage: deploy
   script:
     - kubectl config use-context elena_soboleva/churn_prediction:churn-prediction # sets the Kubernetes context to the specified project and agent
-    - cat k8s.yaml | sed -e "s,__VERSION_GRADIO__,${CI_REGISTRY}/${CI_GRADIO_PATH}:${GRADIO_VERSION}," | sed -e "s,__VERSION_API__,${CI_REGISTRY}/${CI_API_PATH}:${API_VERSION}," |kubectl apply -f - # reads the k8s.yaml file and replaces the __VERSION__ placeholder with the Docker image tag from the build stage, applies the Kubernetes configuration to deploy the app
+    - cat k8s.yaml | sed -e "s,__VERSION_GRADIO__,${CI_REGISTRY}/${CI_GRADIO_PATH}:${GRADIO_VERSION}," | sed -e "s,__VERSION_API__,${CI_REGISTRY}/${CI_API_PATH}:${API_VERSION}," | kubectl apply -f - --validate=false # reads the k8s.yaml file and replaces the __VERSION__ placeholder with the Docker image tag from the build stage, applies the Kubernetes configuration to deploy the app
 
 
 
