--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ variables:
   DOCKER_TLS_VERIFY: 1 # enables TLS verification for secure Docker operations
   DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client" # path to the client TLS certificates
   DOCKER_DRIVER: overlay2 # specifies the storage driver for Docker
+  PROJECT_NAME: churn-prediction
   API_VERSION: 0.1
   GRADIO_VERSION: 0.1
 
@@ -40,7 +41,13 @@ deploy:
   stage: deploy
   script:
     - kubectl config use-context elena_soboleva/churn_prediction:churn-prediction # sets the Kubernetes context to the specified project and agent
-    - cat k8s.yaml | sed -e "s,__VERSION_GRADIO__,${CI_REGISTRY}/${CI_GRADIO_PATH}:${GRADIO_VERSION}," | sed -e "s,__VERSION_API__,${CI_REGISTRY}/${CI_API_PATH}:${API_VERSION}," | kubectl apply -f - --validate=false # reads the k8s.yaml file and replaces the __VERSION__ placeholder with the Docker image tag from the build stage, applies the Kubernetes configuration to deploy the app
+    - >-
+      cat k8s.yaml 
+      | sed -e "s,__VERSION_GRADIO__,${CI_REGISTRY}/${CI_GRADIO_PATH}:${GRADIO_VERSION}," 
+      | sed -e "s,__VERSION_API__,${CI_REGISTRY}/${CI_API_PATH}:${API_VERSION}," 
+      | sed -e "s,__PROJECT_NAME__,${PROJECT_NAME},"
+      | kubectl apply -f -
+    
 
 
 
