--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,9 +6,10 @@ RUN pip install --upgrade pip
 
 RUN pip install -r requirements.txt
 
+COPY lib .
 COPY api.py .
 COPY best_model.pkl .
 
 LABEL authors="admin"
 
-ENTRYPOINT ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
+ENTRYPOINT ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "7000"]
