--- a/k8s.yaml
+++ b/k8s.yaml
@@ -19,7 +19,7 @@ spec: # defines the desired state for the deployment
         - name: ui # the name of the container
           image: __VERSION_GRADIO__ # the Docker image used for this container
           ports:
-            - containerPort: 7860 # specifies that port 80 should be exposed on the container
+            - containerPort: 7880 # specifies that port 80 should be exposed on the container
           env:
             - name: UI_URL
               value: "http://ui-service.default.svc.cluster.local"
@@ -28,14 +28,14 @@ spec: # defines the desired state for the deployment
 apiVersion: v1 # specifies the API version for the Service resource
 kind: Service
 metadata:
-  name: ui-service
+  name: ui-__PROJECT_NAME__
 spec:
   selector:
     app: ui
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 7860
+      targetPort: 7880
   type: LoadBalancer
 
 
@@ -58,18 +58,18 @@ spec:
         - name: api
           image: __VERSION_API__
           ports:
-            - containerPort: 8000
+            - containerPort: 7000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
+  name: api-__PROJECT_NAME__
 spec:
   selector:
     app: api
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8000
+      targetPort: 7000
   type: LoadBalancer
 
