--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ variables:
   PROJECT_NAME: churn-prediction
   API_VERSION: 0.8
   GRADIO_VERSION: 0.8
+  CI_STREAMLIT_PATH: streamlit
 
 services:
   - docker:20.10.16-dind # Docker-in-Docker (DinD) service image that allows running Docker commands inside a Docker container
@@ -31,9 +32,9 @@ build:
     - docker push "${CI_REGISTRY}/${CI_API_PATH}:${API_VERSION}" # pushes the built Docker image to the specified registry, making it available for deployment
     - >- # builds a Docker image from the Dockerfile located in the project directory, tagging it with the commit SHA for versioning
       docker build
-      "${CI_GRADIO_PATH}"  
-      --tag "${CI_REGISTRY}/${CI_GRADIO_PATH}:${GRADIO_VERSION}"
-    - docker push "${CI_REGISTRY}/${CI_GRADIO_PATH}:${GRADIO_VERSION}" # pushes the built Docker image to the specified registry, making it available for deployment
+      "${CI_STREAMLIT_PATH}"  
+      --tag "${CI_REGISTRY}/${CI_STREAMLIT_PATH}:${GRADIO_VERSION}"
+    - docker push "${CI_REGISTRY}/${CI_STREAMLIT_PATH}:${GRADIO_VERSION}" # pushes the built Docker image to the specified registry, making it available for deployment
 
 
 deploy:
@@ -43,7 +44,7 @@ deploy:
     - kubectl config use-context elena_soboleva/churn_prediction:churn-prediction # sets the Kubernetes context to the specified project and agent
     - >-
       cat k8s.yaml 
-      | sed -e "s,__VERSION_GRADIO__,${CI_REGISTRY}/${CI_GRADIO_PATH}:${GRADIO_VERSION}," 
+      | sed -e "s,__VERSION_GRADIO__,${CI_REGISTRY}/${CI_STREAMLIT_PATH}:${GRADIO_VERSION}," 
       | sed -e "s,__VERSION_API__,${CI_REGISTRY}/${CI_API_PATH}:${API_VERSION}," 
       | sed -e "s,__PROJECT_NAME__,${PROJECT_NAME},"
       | kubectl apply -f -
